Feature: 72654867 - Inclusão de cadastro de pedidos
