# src/swagger-output.json
@@ -94,6 +94,87 @@
           }
         }
       }
+    },
+    "/pedido/cadastrar": {
+      "post": {
+        "tags": [
+          "Pedidos"
+        ],
+        "summary": "Cadastrar novo pedido",
+        "description": "Endpoint para cadastro de novo cliente para posterior identificação em pedidos e uso em campanhas de marketing",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "required": [
+                "clientId"
+              ],
+              "properties": {
+                "clientId": {
+                  "type": "string",
+                  "minLength": 36,
+                  "maxLength": 36,
+                  "format": "uuid",
+                  "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Pedido cadastrado com sucesso",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Pedido cadastrado com sucesso"
+                },
+                "pedido": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "data": {
+                      "type": "string",
+                      "example": "2021-10-10T15:00:00.000Z"
+                    },
+                    "clienteId": {
+                      "type": "string",
+                      "example": "29a81eeb-d16d-4d6c-a86c-e13597667307"
+                    },
+                    "status": {
+                      "type": "string",
+                      "example": "RASCUNHO"
+                    },
+                    "pagamentoStatus": {
+                      "type": "string",
+                      "example": "PENDENTE"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Ocorreu um erro inesperado",
+            "schema": {
+              "properties": {
+                "mensagem": {
+                  "type": "string",
+                  "example": "Ocorreu um erro inesperado: Pedido não encontrado"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
